<resources>
    <string name="app_name">My parking meter app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Check in</string>
    <string name="nav_check_out">Check out</string>
    <string name="nav_reg_pay">Register payment</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_sign_off">Sign off</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Check in</item>
        <item>Check out</item>
        <item>Register payment</item>
        <item>Notifications</item>
        <item>Settings</item>
        <item>Sign off</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Sign off</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- String for settings -->
    <string name="action_settings">Settings</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>

    <!-- String for register payment -->
    <string name="hint_register">Enter your card number</string>
    <string name="hint_year">Enter a valid year</string>
    <string name="hint_month">Enter a valid month</string>
    <string name="hint_cvv">Enter a valid cvv</string>
    <!-- String for commons -->
    <string name="save">Save</string>
    <string name="hint_card_number">Card number</string>
    <string name="hint_card_month">Month</string>
    <string name="hint_card_year">Year</string>
    <string name="hint_card_cvv">CVV</string>
    <string name="scan">Scan</string>
</resources>
