<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/id_check_out"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_check_out" />
        <item
            android:id="@+id/id_reg_pay"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_reg_pay" />
        <item
            android:id="@+id/id_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />
        <item
            android:id="@+id/id_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/id_sign_off"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_sign_off" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
